Fixing an issue with file/folder names overlapping the actions buttons in the document manager
Cleaning up core.scss module references and imports

--- a/modules/core/client/scss/components/file-browser.scss
+++ b/modules/core/client/scss/components/file-browser.scss
@@ -149,6 +149,11 @@ a.icon-btn {
             }
         }
 
+        .root-icon {
+            top: -1px;
+            left: -1px;
+        }
+
         .back-icon {
             display: none;
         }
@@ -170,14 +175,13 @@ a.icon-btn {
 
         li:last-child {
             .btn {
-                
                 font-weight: bold;
                 color: $file-browser-breadcrumb-active-color;
 
                 &:hover,
                 &:focus {
                     background: transparent;
-                    border-color: transparent;
+                    //border-color: transparent;
                 }
             }
         }
@@ -474,9 +478,8 @@ a.icon-btn {
         }
 
         .row-actions {
-            display: none;
             position: absolute;
-            top: 0.6rem;
+            top: 0.5rem;
             right: 2.5rem;
 
             .btn {
@@ -505,6 +508,11 @@ a.icon-btn {
 
             .drill-in-btn {
                 display: none;
+                
+                .glyphicon {
+                    top: 0.1rem;
+                    font-weight: bold;
+                }
             }
 
             &.visible {
@@ -564,11 +572,41 @@ a.icon-btn {
     .fb-list {
         .fb-col-group {
             .row-actions {
-                right: 1rem;
+                right: 0.8rem;
 
                 .drill-in-btn {
                     display: inline-block;
                 }
+            }
+        }
+
+        .fb-folders {
+            .fb-col-group {
+                padding-right: 8.5rem;
+            }
+        }
+
+        .fb-files {
+            .fb-col-group {
+                padding-right: 5.5rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .fb-list {
+        .fb-col-group {
+            .row-actions {
+                visibility: hidden;
+            }
+        }
+    }
+
+    .fb-list-item:hover {
+        .fb-col-group {
+            .row-actions {
+                visibility: visible;
             }
         }
     }
@@ -653,11 +691,8 @@ span.avatar {
         opacity: 0;
         z-index: 2;
 
-        &:hover,
-        &:focus {
+        &:hover {
             + label {
-                background: #EEE;
-
                 span {
                     opacity: 0.2rem;
                     visibility: visible;
